change team logo names and fix table

--- a/Season-1-Driver/s1-teamdata.html
+++ b/Season-1-Driver/s1-teamdata.html
@@ -46,6 +46,9 @@
       td {
         padding: 4px;
       }
+      .logos {
+        width: 50px;
+      }
     }
     thead {
       font-size: 20px;
@@ -64,8 +67,9 @@
     .dataTables_filter {
       margin-bottom: 10px;
     }
-    img.s1.logos {
-      width: 50px;
+
+    .logos {
+      height: 40px;
     }
     .dataTables_filter input {
       background-color: white;
@@ -122,8 +126,8 @@
           <td>Belgium</td>
           <td>
             <img
-              class="s1 logos"
-              src="../Season%201%20Photos/Season%201%20Team%20Logos/Belgium%20s1%20crest.png"
+              class="logos"
+              src="../Season-1-Team-Logos/belgiumcrest.png"
               alt="Belgium's S1 Crest"
             />
           </td>
@@ -136,8 +140,8 @@
           <td>Brazil</td>
           <td>
             <img
-              class="s1 logos"
-              src="../Season%201%20Photos/Season%201%20Team%20Logos/Brazil%20s1%20crest"
+              class="logos"
+              src="../Season-1-Team-Logos/Brazilcrest"
               alt="Brazil's S1 Crest"
             />
           </td>
@@ -150,8 +154,8 @@
           <td>France</td>
           <td>
             <img
-              class="s1 logos"
-              src="../Season%201%20Photos/Season%201%20Team%20Logos/France%20s1%20crest.png"
+              class="logos"
+              src="../Season-1-Team-Logos/Francecrest.png"
               alt="France's S1 Crest"
             />
           </td>
@@ -164,8 +168,8 @@
           <td>Netherlands</td>
           <td>
             <img
-              class="s1 logos"
-              src="../Season%201%20Photos/Season%201%20Team%20Logos/Netherlands%20s1%20crest.png"
+              class="logos"
+              src="../Season-1-Team-Logos/Netherlandscrest.png"
               alt="Netherlands' S1 Crest"
             />
           </td>
@@ -178,8 +182,8 @@
           <td>Portugal</td>
           <td>
             <img
-              class="s1 logos"
-              src="../Season%201%20Photos/Season%201%20Team%20Logos/portugal%20s1%20crest.png"
+              class="logos"
+              src="../Season-1-Team-Logos/portugalcrest.png"
               alt="portugal's S1 Crest"
             />
           </td>
@@ -192,8 +196,8 @@
           <td>Spain</td>
           <td>
             <img
-              class="s1 logos"
-              src="../Season%201%20Photos/Season%201%20Team%20Logos/spain%20s1%20crest.png"
+              class="logos"
+              src="../Season-1-Team-Logos/spaincrest.png"
               alt="spain's S1 Crest"
             />
           </td>
@@ -206,8 +210,8 @@
           <td>Mexico</td>
           <td>
             <img
-              class="s1 logos"
-              src="../Season%201%20Photos/Season%201%20Team%20Logos/mexico%20s1%20crest.png"
+              class="logos"
+              src="../Season-1-Team-Logos/mexicocrest.png"
               alt="mexico's S1 Crest"
             />
           </td>
@@ -220,8 +224,8 @@
           <td>Turkey</td>
           <td>
             <img
-              class="s1 logos"
-              src="../Season%201%20Photos/Season%201%20Team%20Logos/turkey%20s1%20crest.webp"
+              class="logos"
+              src="../Season-1-Team-Logos/turkeycrest.webp"
               alt="turkey's S1 Crest"
             />
           </td>
@@ -234,8 +238,8 @@
           <td>Uruguay</td>
           <td>
             <img
-              class="s1 logos"
-              src="../Season%201%20Photos/Season%201%20Team%20Logos/uruguay%20s1%20crest.webp"
+              class="logos"
+              src="../Season-1-Team-Logos/uruguaycrest.webp"
               alt="uruguay's S1 Crest"
             />
           </td>
@@ -248,8 +252,8 @@
           <td>Italy</td>
           <td>
             <img
-              class="s1 logos"
-              src="../Season%201%20Photos/Season%201%20Team%20Logos/italy%20s1%20crest.png"
+              class="logos"
+              src="../Season-1-Team-Logos/italycrest.png"
               alt="italy's S1 Crest"
             />
           </td>
@@ -262,8 +266,8 @@
           <td>Argentina</td>
           <td>
             <img
-              class="s1 logos"
-              src="../Season%201%20Photos/Season%201%20Team%20Logos/argentina%20s1%20crest.png"
+              class="logos"
+              src="../Season-1-Team-Logos/argentinacrest.png"
               alt="argentina's S1 Crest"
             />
           </td>
@@ -276,8 +280,8 @@
           <td>Colombia</td>
           <td>
             <img
-              class="s1 logos"
-              src="../Season%201%20Photos/Season%201%20Team%20Logos/colombia%20s1%20crest.webp"
+              class="logos"
+              src="../Season-1-Team-Logos/colombiacrest.webp"
               alt="colombia's S1 Crest"
             />
           </td>
@@ -290,8 +294,8 @@
           <td>Germany</td>
           <td>
             <img
-              class="s1 logos"
-              src="../Season%201%20Photos/Season%201%20Team%20Logos/germany%20s1%20crest%20.png"
+              class="logos"
+              src="../Season-1-Team-Logos/germanycrest.png"
               alt="germany's S1 Crest"
             />
           </td>
@@ -304,8 +308,8 @@
           <td>England</td>
           <td>
             <img
-              class="s1 logos"
-              src="../Season%201%20Photos/Season%201%20Team%20Logos/england%20s1%20crest"
+              class="logos"
+              src="../Season-1-Team-Logos/englandcrest"
               alt="england's S1 Crest"
             />
           </td>
@@ -318,8 +322,8 @@
           <td>Czech Republic</td>
           <td>
             <img
-              class="s1 logos"
-              src="../Season%201%20Photos/Season%201%20Team%20Logos/czech%20republic%20s1%20crest.webp"
+              class="logos"
+              src="../Season-1-Team-Logos/czechrepubliccrest.webp"
               alt="Czech republic's S1 Crest"
             />
           </td>
@@ -332,8 +336,8 @@
           <td>Sweden</td>
           <td>
             <img
-              class="s1 logos"
-              src="../Season%201%20Photos/Season%201%20Team%20Logos/sweeden%20s1%20crest.png"
+              class="logos"
+              src="../Season-1-Team-Logos/sweedencrest.png"
               alt="sweeden's S1 Crest"
             />
           </td>
@@ -346,8 +350,8 @@
           <td>Côte d’Ivoire</td>
           <td>
             <img
-              class="s1 logos"
-              src="../Season%201%20Photos/Season%201%20Team%20Logos/cote%20divorie%20s1%20crest.webp"
+              class="logos"
+              src="../Season-1-Team-Logos/cotedivoriecrest.webp"
               alt="cote divorie's S1 Crest"
             />
           </td>
@@ -360,8 +364,8 @@
           <td>Denmark</td>
           <td>
             <img
-              class="s1 logos"
-              src="../Season%201%20Photos/Season%201%20Team%20Logos/denmark%20s1%20logo.webp"
+              class="logos"
+              src="../Season-1-Team-Logos/denmarklogo.webp"
               alt="denmark's S1 Crest"
             />
           </td>
@@ -374,8 +378,8 @@
           <td>Poland</td>
           <td>
             <img
-              class="s1 logos"
-              src="../Season%201%20Photos/Season%201%20Team%20Logos/poland%20s1%20crest.png"
+              class="logos"
+              src="../Season-1-Team-Logos/polandcrest.png"
               alt="poland's S1 Crest"
             />
           </td>
@@ -388,8 +392,8 @@
           <td>Chile</td>
           <td>
             <img
-              class="s1 logos"
-              src="../Season%201%20Photos/Season%201%20Team%20Logos/chile%20s1%20logo.webp"
+              class="logos"
+              src="../Season-1-Team-Logos/chilelogo.webp"
               alt="chile's S1 Crest"
             />
           </td>
@@ -402,8 +406,8 @@
           <td>Switzerland</td>
           <td>
             <img
-              class="s1 logos"
-              src="../Season%201%20Photos/Season%201%20Team%20Logos/switzerland%20s1%20crest.png"
+              class="logos"
+              src="../Season-1-Team-Logos/switzerlandcrest.png"
               alt="switzerland's S1 Crest"
             />
           </td>
@@ -416,8 +420,8 @@
           <td>United States</td>
           <td>
             <img
-              class="s1 logos"
-              src="../Season%201%20Photos/Season%201%20Team%20Logos/US%20s1%20crest.png"
+              class="logos"
+              src="../Season-1-Team-Logos/UScrest.png"
               alt="US's S1 Crest"
             />
           </td>
@@ -430,8 +434,8 @@
           <td>Russia</td>
           <td>
             <img
-              class="s1 logos"
-              src="../Season%201%20Photos/Season%201%20Team%20Logos/russia%20s1%20crest.png"
+              class="logos"
+              src="../Season-1-Team-Logos/russiacrest.png"
               alt="russia's S1 Crest"
             />
           </td>
@@ -444,8 +448,8 @@
           <td>Ireland</td>
           <td>
             <img
-              class="s1 logos"
-              src="../Season%201%20Photos/Season%201%20Team%20Logos/ireland%20s1%20logo.webp"
+              class="logos"
+              src="../Season-1-Team-Logos/irelandlogo.webp"
               alt="ireland's S1 Crest"
             />
           </td>
@@ -458,8 +462,8 @@
           <td>Austria</td>
           <td>
             <img
-              class="s1 logos"
-              src="../Season%201%20Photos/Season%201%20Team%20Logos/austria%20s1%20crest.png"
+              class="logos"
+              src="../Season-1-Team-Logos/austriacrest.png"
               alt="austria's S1 Crest"
             />
           </td>
@@ -472,8 +476,8 @@
           <td>Cameroon</td>
           <td>
             <img
-              class="s1 logos"
-              src="../Season%201%20Photos/Season%201%20Team%20Logos/cameroon%20s1%20logo.webp"
+              class="logos"
+              src="../Season-1-Team-Logos/cameroonlogo.webp"
               alt="cameroon's S1 Crest"
             />
           </td>
@@ -486,8 +490,8 @@
           <td>Wales</td>
           <td>
             <img
-              class="s1 logos"
-              src="../Season%201%20Photos/Season%201%20Team%20Logos/wales%20s1%20crest.png"
+              class="logos"
+              src="../Season-1-Team-Logos/walescrest.png"
               alt="wales's S1 Crest"
             />
           </td>
@@ -500,8 +504,8 @@
           <td>Scotland</td>
           <td>
             <img
-              class="s1 logos"
-              src="../Season%201%20Photos/Season%201%20Team%20Logos/scotland%20s1%20logo.png"
+              class="logos"
+              src="../Season-1-Team-Logos/scotlandlogo.png"
               alt="scotland's S1 Crest"
             />
           </td>
@@ -514,8 +518,8 @@
           <td>Greece</td>
           <td>
             <img
-              class="s1 logos"
-              src="../Season%201%20Photos/Season%201%20Team%20Logos/greece%20s1%20logo.webp"
+              class="logos"
+              src="../Season-1-Team-Logos/greecelogo.webp"
               alt="greece's S1 Crest"
             />
           </td>
@@ -528,8 +532,8 @@
           <td>India</td>
           <td>
             <img
-              class="s1 logos"
-              src="../Season%201%20Photos/Season%201%20Team%20Logos/india%20s1%20crest.png"
+              class="logos"
+              src="../Season-1-Team-Logos/indiacrest.png"
               alt="india's S1 Crest"
             />
           </td>
@@ -542,8 +546,8 @@
           <td>Venezuela</td>
           <td>
             <img
-              class="s1 logos"
-              src="../Season%201%20Photos/Season%201%20Team%20Logos/venezuela%20s1%20logo.webp"
+              class="logos"
+              src="../Season-1-Team-Logos/venezuelalogo.webp"
               alt="venezuela's S1 Crest"
             />
           </td>
@@ -556,8 +560,8 @@
           <td>Korea</td>
           <td>
             <img
-              class="s1 logos"
-              src="../Season%201%20Photos/Season%201%20Team%20Logos/korea%20s1%20logo.png"
+              class="logos"
+              src="../Season-1-Team-Logos/korealogo.png"
               alt="korea's S1 Crest"
             />
           </td>
@@ -570,8 +574,8 @@
           <td>Egypt</td>
           <td>
             <img
-              class="s1 logos"
-              src="../Season%201%20Photos/Season%201%20Team%20Logos/egypt%20s1%20crest.png"
+              class="logos"
+              src="../Season-1-Team-Logos/egyptcrest.png"
               alt="egypt's S1 Crest"
             />
           </td>
@@ -584,8 +588,8 @@
           <td>Norway</td>
           <td>
             <img
-              class="s1 logos"
-              src="../Season%201%20Photos/Season%201%20Team%20Logos/norway%20s1%20logo.webp"
+              class="logos"
+              src="../Season-1-Team-Logos/norwaylogo.webp"
               alt="norway's S1 Crest"
             />
           </td>
@@ -598,8 +602,8 @@
           <td>Peru</td>
           <td>
             <img
-              class="s1 logos"
-              src="../Season%201%20Photos/Season%201%20Team%20Logos/peru.png"
+              class="logos"
+              src="../Season-1-Team-Logos/peru.png"
               alt="peru's S1 Crest"
             />
           </td>
@@ -612,8 +616,8 @@
           <td>Northern Ireland</td>
           <td>
             <img
-              class="s1 logos"
-              src="../Season%201%20Photos/Season%201%20Team%20Logos/northern%20ireland%20s1%20logo.webp"
+              class="logos"
+              src="../Season-1-Team-Logos/northernirelandlogo.webp"
               alt="northern ireland's S1 Crest"
             />
           </td>
@@ -626,8 +630,8 @@
           <td>Bulgaria</td>
           <td>
             <img
-              class="s1 logos"
-              src="../Season%201%20Photos/Season%201%20Team%20Logos/bulgaria%20s1%20crest.webp"
+              class="logos"
+              src="../Season-1-Team-Logos/bulgariacrest.webp"
               alt="bulgaria's S1 Crest"
             />
           </td>
@@ -640,8 +644,8 @@
           <td>Romania</td>
           <td>
             <img
-              class="s1 logos"
-              src="../Season%201%20Photos/Season%201%20Team%20Logos/romania%20s1%20crest.webp"
+              class="logos"
+              src="../Season-1-Team-Logos/romaniacrest.webp"
               alt="romania's S1 Crest"
             />
           </td>
@@ -654,8 +658,8 @@
           <td>Australia</td>
           <td>
             <img
-              class="s1 logos"
-              src="../Season%201%20Photos/Season%201%20Team%20Logos/australia%20s1%20crest.webp"
+              class="logos"
+              src="../Season-1-Team-Logos/australiacrest.webp"
               alt="australia's S1 Crest"
             />
           </td>
@@ -668,8 +672,8 @@
           <td>Ecuador</td>
           <td>
             <img
-              class="s1 logos"
-              src="../Season%201%20Photos/Season%201%20Team%20Logos/ecuador%20s1%20logo.png"
+              class="logos"
+              src="../Season-1-Team-Logos/ecuadorlogo.png"
               alt="ecuador's S1 Crest"
             />
           </td>
@@ -682,8 +686,8 @@
           <td>Slovenia</td>
           <td>
             <img
-              class="s1 logos"
-              src="../Season%201%20Photos/Season%201%20Team%20Logos/slovenia%20s1%20logo.webp"
+              class="logos"
+              src="../Season-1-Team-Logos/slovenialogo.webp"
               alt="slovenia's S1 Crest"
             />
           </td>
@@ -696,8 +700,8 @@
           <td>South Africa</td>
           <td>
             <img
-              class="s1 logos"
-              src="../Season%201%20Photos/Season%201%20Team%20Logos/south%20africa%20s1%20logo.png"
+              class="logos"
+              src="../Season-1-Team-Logos/southafricalogo.png"
               alt="south africa's S1 Crest"
             />
           </td>
@@ -710,8 +714,8 @@
           <td>New Zealand</td>
           <td>
             <img
-              class="s1 logos"
-              src="../Season%201%20Photos/Season%201%20Team%20Logos/new%20zeland%20s1%20logo.webp"
+              class="logos"
+              src="../Season-1-Team-Logos/newzelandlogo.webp"
               alt="new zeland's S1 Crest"
             />
           </td>
@@ -724,8 +728,8 @@
           <td>Hungary</td>
           <td>
             <img
-              class="s1 logos"
-              src="../Season%201%20Photos/Season%201%20Team%20Logos/hungary%20s1%20logo.webp"
+              class="logos"
+              src="../Season-1-Team-Logos/hungarylogo.webp"
               alt="hungary's S1 Crest"
             />
           </td>
@@ -738,8 +742,8 @@
           <td>Finland</td>
           <td>
             <img
-              class="s1 logos"
-              src="../Season%201%20Photos/Season%201%20Team%20Logos/finland%20s1%20crest.png"
+              class="logos"
+              src="../Season-1-Team-Logos/finlandcrest.png"
               alt="finland's S1 Crest"
             />
           </td>
@@ -752,8 +756,8 @@
           <td>Bolivia</td>
           <td>
             <img
-              class="s1 logos"
-              src="../Season%201%20Photos/Season%201%20Team%20Logos/bolivia%20s1%20crest.webp"
+              class="logos"
+              src="../Season-1-Team-Logos/boliviacrest.webp"
               alt="bolivia's S1 Crest"
             />
           </td>
@@ -766,8 +770,8 @@
           <td>Paraguay</td>
           <td>
             <img
-              class="s1 logos"
-              src="../Season%201%20Photos/Season%201%20Team%20Logos/paraguay%20s1%20crest.webp"
+              class="logos"
+              src="../Season-1-Team-Logos/paraguaycrest.webp"
               alt="Paraguay's S1 Crest"
             />
           </td>
