individual stats finished

--- a/Season-1-Driver/S1-index.html
+++ b/Season-1-Driver/S1-index.html
@@ -91,6 +91,20 @@
           </button>
         </div>
       </article>
+      <article class="grid grid--1x2 feature">
+        <div class="feature__content">
+          <h3 class="feature__heading">H2H Performances</h3>
+          <button class="button2">
+            <a class="links" href="s1-H2H.html">Learn More →</a>
+          </button>
+        </div>
+        <div class="feature__content">
+          <h3 class="feature__heading">Graphs</h3>
+          <button class="button2">
+            <a class="links" href="s1-graphs.html">See More →</a>
+          </button>
+        </div>
+      </article>
     </section>
   </body>
 </html>
