--- a/Season-1-Driver/s1-indivstats.html
+++ b/Season-1-Driver/s1-indivstats.html
@@ -4,7 +4,369 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="stylesheet" href="../css/normalize.css" />
+    <link rel="stylesheet" href="../css/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300;400;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="../css/normalize.css" />
+    <link rel="stylesheet" href="../css/styles.css" />
+    <title>League Stats</title>
   </head>
-  <body></body>
+  <style>
+    th,
+    td {
+      text-align: center;
+      padding: 8px;
+      border-bottom: 1px solid black;
+      border-bottom: 1px solid #ddd;
+    }
+    tr:nth-child(even) {
+      background-color: #f2f2f2;
+    }
+    @media only screen and (max-width: 600px) {
+      table {
+        font-size: 12px;
+      }
+
+      th,
+      td {
+        padding: 4px;
+      }
+    }
+    thead {
+      font-size: 20px;
+      font-weight: 800;
+    }
+    th {
+      background-color: #f3cc59;
+      color: black;
+      border: 1px solid black;
+      font-size: 2.5rem;
+    }
+    tr:nth-child(even) {
+      background-color: #f2f2f2;
+    }
+    tr:nth-child(odd) {
+      background-color: #ffffff;
+    }
+    .leaguestats__table {
+      width: 100%;
+      border-collapse: collapse;
+      font-size: 2rem;
+    }
+    /*
+    .leaguestats__table th:first-child,
+    .leaguestats__table td:first-child {
+      width: 50%;
+    }
+    .leaguestats__table th:last-child,
+    .leaguestats__table td:last-child {
+      width: 50%;
+    }
+    */
+    .leaguestats__table tbody {
+      border-left: 1px solid black;
+      border-right: 1px solid black;
+      border-bottom: 1px solid black;
+    }
+    .leaguestats__table-GS {
+      width: 100%;
+      border-collapse: collapse;
+      font-size: 1.5rem;
+    }
+    .leaguestats__table-GS th {
+      font-size: 1.5rem;
+    }
+    .leaguestats__table-games td {
+      border-right: 1px solid black;
+    }
+    h4 {
+      color: white;
+      font-size: 2rem;
+      margin-bottom: -20px;
+      text-shadow: 2px 2px 4px #444444;
+    }
+    .bruh {
+      padding-bottom: 0;
+    }
+  </style>
+  <body>
+    <nav class="nav collapsible">
+      <a href="../index.html"
+        ><img class="nav__image" src="../HP-images/FIFA16.png" alt=""
+      /></a>
+      <svg class="icon icon--white nav__toggler">
+        <use xlink:href="../HP-images/sprite.svg#menu"></use>
+      </svg>
+      <ul class="list nav__list collapsible__content">
+        <li class="nav__item">
+          <a href="../index.html">Home</a>
+        </li>
+        <li class="nav__item">
+          <a href="../Player-Bios/player-bios-index.html">Player Biographies</a>
+        </li>
+        <li class="nav__item">
+          <a href="../Season-2-Driver/S2-index.html">Season 2 Stats & Info</a>
+        </li>
+        <li class="nav__item">
+          <a href="../Tournaments/tournaments-index.html">Tournaments</a>
+        </li>
+        <li class="nav__item">
+          <a href="../Extras/extras-index.html">Extras</a>
+        </li>
+      </ul>
+    </nav>
+    <script src="../js/main.js"></script>
+    <section class="block container bruh">
+      <header class="block__header">
+        <h2 class="seasons-header bio-header">Individual Stats</h2>
+        <p class="seasons-text">
+          Scroll to view the stats for the 5 veteran players.
+        </p>
+      </header>
+    </section>
+    <section class="block container">
+      <header class="block__header">
+        <h2 class="seasons-header">Basic Stats:</h2>
+      </header>
+      <table class="leaguestats__table">
+        <thead>
+          <tr>
+            <th>Player Name</th>
+            <th>Games Played</th>
+            <th>Win Percentage %</th>
+            <th>Wins</th>
+            <th>Losses</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Alejandro</td>
+            <td>188</td>
+            <td>64.4%</td>
+            <td>121</td>
+            <td>66</td>
+          </tr>
+          <tr>
+            <td>Joe</td>
+            <td>156</td>
+            <td>26.3%</td>
+            <td>41</td>
+            <td>115</td>
+          </tr>
+          <tr>
+            <td>Karsin</td>
+            <td>136</td>
+            <td>55.9%</td>
+            <td>76</td>
+            <td>59</td>
+          </tr>
+          <tr>
+            <td>Gabe</td>
+            <td>90</td>
+            <td>70.0%</td>
+            <td>63</td>
+            <td>27</td>
+          </tr>
+          <tr>
+            <td>Michael</td>
+            <td>102</td>
+            <td>32.4%</td>
+            <td>33</td>
+            <td>69</td>
+          </tr>
+        </tbody>
+      </table>
+    </section>
+    <section class="block container">
+      <header class="block__header">
+        <h2 class="seasons-header">Scoring Statistics:</h2>
+      </header>
+      <table class="leaguestats__table-GS">
+        <thead>
+          <tr>
+            <th>Player Name</th>
+            <th>Goals Scored</th>
+            <th>Goals / Game</th>
+            <th>Shots / Game</th>
+            <th>SOG/ Game</th>
+            <th>Shot Conversion %</th>
+            <th>SOG Conversion %</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Alejandro</td>
+            <td>276</td>
+            <td>1.47</td>
+            <td>7.5</td>
+            <td>4.7</td>
+            <td>19.6%</td>
+            <td>31.2%</td>
+          </tr>
+          <tr>
+            <td>Joe</td>
+            <td>130</td>
+            <td>0.83</td>
+            <td>5.4</td>
+            <td>3.0</td>
+            <td>20.5%</td>
+            <td>27.7%</td>
+          </tr>
+          <tr>
+            <td>Karsin</td>
+            <td>197</td>
+            <td>1.45</td>
+            <td>7.1</td>
+            <td>4.4</td>
+            <td>21.0%</td>
+            <td>32.9%</td>
+          </tr>
+          <tr>
+            <td>Gabe</td>
+            <td>161</td>
+            <td>1.79</td>
+            <td>8.5</td>
+            <td>4.8</td>
+            <td>21.0%</td>
+            <td>37.6%</td>
+          </tr>
+          <tr>
+            <td>Michael</td>
+            <td>84</td>
+            <td>0.82</td>
+            <td>5.9</td>
+            <td>2.9</td>
+            <td>13.9%</td>
+            <td>28.2%</td>
+          </tr>
+        </tbody>
+      </table>
+    </section>
+    <section class="block container">
+      <header class="block__header">
+        <h2 class="seasons-header">Defensive Statistics:</h2>
+        <h4>
+          Note: These are stats that were against a player (AKA: How well does
+          the opponent perform against them)
+        </h4>
+      </header>
+      <table class="leaguestats__table-GS">
+        <thead>
+          <tr>
+            <th>Player Name</th>
+            <th>Goals / Game</th>
+            <th>Shots / Game</th>
+            <th>SOG/ Game</th>
+            <th>Shot Conversion %</th>
+            <th>SOG Conversion %</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Alejandro</td>
+            <td>0.98</td>
+            <td>5.90</td>
+            <td>3.30</td>
+            <td>16.6%</td>
+            <td>29.7%</td>
+          </tr>
+          <tr>
+            <td>Joe</td>
+            <td>1.62</td>
+            <td>8.21</td>
+            <td>4.78</td>
+            <td>19.8%</td>
+            <td>34.0%</td>
+          </tr>
+          <tr>
+            <td>Karsin</td>
+            <td>6.36</td>
+            <td>3.43</td>
+            <td>7.1</td>
+            <td>18.5%</td>
+            <td>34.3%</td>
+          </tr>
+          <tr>
+            <td>Gabe</td>
+            <td>1.06</td>
+            <td>5.87</td>
+            <td>3.54</td>
+            <td>18.0%</td>
+            <td>29.8%</td>
+          </tr>
+          <tr>
+            <td>Michael</td>
+            <td>7.90</td>
+            <td>5.20</td>
+            <td>2.9</td>
+            <td>20.3%</td>
+            <td>30.9%</td>
+          </tr>
+        </tbody>
+      </table>
+    </section>
+    <section class="block container">
+      <header class="block__header">
+        <h2 class="seasons-header">Other Statistics:</h2>
+        <h4>
+          Note: Upset wins occur when a player has the lower rated team and
+          wins, Upset losses occur when a player has a higher rated team and
+          loses
+        </h4>
+      </header>
+      <table class="leaguestats__table-GS">
+        <thead>
+          <tr>
+            <th>Player Name</th>
+            <th>Yellow Cards / Game</th>
+            <th>Red Cards / Game</th>
+            <th>Upset Wins</th>
+            <th>Upset Losses</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Alejandro</td>
+            <td>0.64</td>
+            <td>0.13</td>
+            <td>59</td>
+            <td>22</td>
+          </tr>
+          <tr>
+            <td>Joe</td>
+            <td>1.33</td>
+            <td>0.20</td>
+            <td>23</td>
+            <td>38</td>
+          </tr>
+          <tr>
+            <td>Karsin</td>
+            <td>0.62</td>
+            <td>0.12</td>
+            <td>44</td>
+            <td>7</td>
+          </tr>
+          <tr>
+            <td>Gabe</td>
+            <td>0.44</td>
+            <td>0.03</td>
+            <td>15</td>
+            <td>3</td>
+          </tr>
+          <tr>
+            <td>Michael</td>
+            <td>0.48</td>
+            <td>0.06</td>
+            <td>5</td>
+            <td>13</td>
+          </tr>
+        </tbody>
+      </table>
+    </section>
+  </body>
 </html>
