finish h2h, start team data

--- a/Season-1-Driver/S1-index.html
+++ b/Season-1-Driver/S1-index.html
@@ -99,9 +99,9 @@
           </button>
         </div>
         <div class="feature__content">
-          <h3 class="feature__heading">Graphs</h3>
+          <h3 class="feature__heading">FIFA 15 Team Data</h3>
           <button class="button2">
-            <a class="links" href="s1-graphs.html">See More →</a>
+            <a class="links" href="S1-FIFATeam-data.html">See More →</a>
           </button>
         </div>
       </article>
