--- a/Player-Bios/Alejandro.html
+++ b/Player-Bios/Alejandro.html
@@ -76,6 +76,7 @@
       align-items: center;
       justify-content: center;
       padding: 2px;
+      background-color: rgb(3, 132, 29);
     }
 
     .crests {
