finish a lot of season 2 stuff

--- a/Season-2-Driver/S2-index.html
+++ b/Season-2-Driver/S2-index.html
@@ -16,6 +16,21 @@
     <link rel="stylesheet" href="../css/styles.css" />
     <title>Tournaments</title>
   </head>
+  <style>
+    .Name {
+      color: white;
+    }
+    .grid--1x2 {
+      grid-template-columns: repeat(2, 45vw);
+      justify-content: center;
+      column-gap: 50px;
+    }
+    .feature__image {
+      object-fit: cover;
+      height: 250px;
+      object-position: top;
+    }
+  </style>
   <body>
     <nav class="nav collapsible">
       <a href="../index.html"
@@ -43,5 +58,144 @@
       </ul>
     </nav>
     <script src="../js/main.js"></script>
+    <section class="block container">
+      <header class="block__header">
+        <h2 class="seasons-header">Season 2: Stats & Info</h2>
+        <p class="seasons-text">
+          Discover comprehensive statistical analysis, insightful information,
+          and engaging content for the 2<sup>nd</sup> season of the league.
+        </p>
+      </header>
+      <article class="grid grid--1x2 feature">
+        <div class="feature__content">
+          <h3 class="feature__heading">
+            <a class="Name" href="S2-IndStats.html">Individual Stats</a>
+          </h3>
+          <p>Each player's own stats for all games played</p>
+        </div>
+        <picture class="feature__image">
+          <a href="S2-IndStats.html"
+            ><img class="feature__image" src="../S2-images/CR7.webp" alt=""
+          /></a>
+        </picture>
+      </article>
+      <article class="grid grid--1x2 feature">
+        <div class="feature__content">
+          <h3 class="feature__heading">
+            <a class="Name" href="S2-LeagueStats.html">League Stats</a>
+          </h3>
+          <p>The whole league's stats, with comparisons to Season 1</p>
+        </div>
+        <picture class="feature__image">
+          <a href="S2-LeagueStats.html"
+            ><img class="feature__image" src="../S2-images/lukaku.webp" alt=""
+          /></a>
+        </picture>
+      </article>
+      <article class="grid grid--1x2 feature">
+        <div class="feature__content">
+          <h3 class="feature__heading">
+            <a class="Name" href="S2-TeamStats.html">Team Stats</a>
+          </h3>
+          <p>Explore how well each FIFA 16 Team is performing.</p>
+        </div>
+        <picture class="feature__image">
+          <a href="S2-TeamStats.html"
+            ><img class="feature__image" src="../S2-images/hazard.webp" alt=""
+          /></a>
+        </picture>
+      </article>
+      <article class="grid grid--1x2 feature">
+        <div class="feature__content">
+          <h3 class="feature__heading">
+            <a class="Name" href="John.html">Win Streaks</a>
+          </h3>
+        </div>
+        <picture class="feature__image">
+          <a href="S2-WinStreaks.html"
+            ><img class="feature__image" src="../S2-images/YYT.webp" alt=""
+          /></a>
+        </picture>
+      </article>
+      <article class="grid grid--1x2 feature">
+        <div class="feature__content">
+          <h3 class="feature__heading">
+            <a class="Name" href="S2-IndStatsAGST.html"
+              >Individual Stats Against</a
+            >
+          </h3>
+          <p>
+            Player's stats against, which represent how well opponents do
+            against them
+          </p>
+        </div>
+        <picture class="feature__image">
+          <a href="S2-IndStatsAGST.html"
+            ><img class="feature__image" src="../S2-images/zlatan.webp" alt=""
+          /></a>
+        </picture>
+      </article>
+      <article class="grid grid--1x2 feature">
+        <div class="feature__content">
+          <h3 class="feature__heading">
+            <a class="Name" href="Karsin.html">Rankings</a>
+          </h3>
+          <p>
+            Player's stats ranked against each other. Both offensive and
+            defensive rankings.
+          </p>
+        </div>
+        <picture class="feature__image">
+          <a href="S2-Rankings.html"
+            ><img class="feature__image" src="../S2-images/matuidi.webp" alt=""
+          /></a>
+        </picture>
+      </article>
+      <article class="grid grid--1x2 feature">
+        <div class="feature__content">
+          <h3 class="feature__heading">
+            <a class="Name" href="S2-FIFA16TS.html"
+              >FIFA 16 International Team Ratings</a
+            >
+          </h3>
+          <p>In-Game Team's Ratings for the current FIFA 16 Game.</p>
+        </div>
+        <picture class="feature__image">
+          <a href="S2-FIFA16TS.html"
+            ><img class="feature__image" src="../S2-images/ramos.webp" alt=""
+          /></a>
+        </picture>
+      </article>
+      <article class="grid grid--1x2 feature">
+        <div class="feature__content">
+          <h3 class="feature__heading">
+            <a class="Name" href="JT.html">J.T.</a>
+          </h3>
+        </div>
+        <picture>
+          <img class="feature__image" src="" alt="jt Image" />
+        </picture>
+      </article>
+      <article class="grid grid--1x2 feature">
+        <div class="feature__content">
+          <h3 class="feature__heading">
+            <a class="Name" href="Jake.html">Jake</a>
+          </h3>
+        </div>
+        <picture>
+          <img class="feature__image" src="" alt="Jake Photo" />
+        </picture>
+      </article>
+      <article class="grid grid--1x2 feature">
+        <div class="feature__content">
+          <h3 class="feature__heading">
+            <a class="Name" href="Grand-Flank.html">Grand Flank</a>
+          </h3>
+        </div>
+        <picture>
+          <img class="feature__image" src="" alt="grand flank Image" />
+        </picture>
+      </article>
+    </section>
   </body>
 </html>
